native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_allocate(
    sogen_dart_app *app, size_t size, int32_t permissions, uint64_t start,
    uint64_t *address);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_allocate_at(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t permissions,
    int32_t *success);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_protect(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t permissions,
    int32_t *success);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_release(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t *success);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_find_free_base(
    sogen_dart_app *app, size_t size, uint64_t start, uint64_t *address);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_get_region(
    sogen_dart_app *app, uint64_t address, int32_t *has_value,
    sogen_dart_memory_region *region);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_get_stats(
    sogen_dart_app *app, sogen_dart_linux_memory_stats *stats);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_get_mapped_regions(
    sogen_dart_app *app, sogen_dart_memory_region_list *regions);
SOGEN_DART_EXPORT void
sogen_dart_memory_region_list_free(sogen_dart_memory_region_list *regions);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_memory_get_mmap_base(sogen_dart_app *app, uint64_t *address);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_memory_set_mmap_base(sogen_dart_app *app, uint64_t address);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_host_port(
    sogen_dart_app *app, uint16_t emulator_port, uint16_t *host_port);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_emulator_port(
    sogen_dart_app *app, uint16_t host_port, uint16_t *emulator_port);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_map_port(
    sogen_dart_app *app, uint16_t emulator_port, uint16_t host_port);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_modules(
    sogen_dart_app *app, sogen_dart_linux_mapped_module_list *modules);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_find_module_by_address(
    sogen_dart_app *app, uint64_t address, int32_t *has_value,
    sogen_dart_linux_mapped_module *module);