native/include/generated/sogen_dart_generated.h

typedef int32_t sogen_dart_status;
typedef struct sogen_dart_buffer {
  uint8_t *data;
  size_t length;
} sogen_dart_buffer;
typedef struct sogen_dart_memory_region {
  uint64_t start;
  uint64_t length;
  int32_t permissions;
  uint64_t allocation_base;
  uint64_t allocation_length;
  int32_t is_reserved;
  int32_t is_committed;
  int32_t initial_permissions;
  int32_t kind;
} sogen_dart_memory_region;
typedef struct sogen_dart_linux_memory_stats {
  uint64_t region_count;
  uint64_t mapped_bytes;
  uint64_t executable_bytes;
} sogen_dart_linux_memory_stats;
typedef struct sogen_dart_memory_region_list {
  sogen_dart_memory_region *data;
  size_t length;
} sogen_dart_memory_region_list;
typedef struct sogen_dart_buffer_list {
  sogen_dart_buffer *data;
  size_t length;
} sogen_dart_buffer_list;
typedef struct sogen_dart_linux_exported_symbol_list {
  sogen_dart_linux_exported_symbol *data;
  size_t length;
} sogen_dart_linux_exported_symbol_list;
typedef struct sogen_dart_linux_mapped_section_list {
  sogen_dart_linux_mapped_section *data;
  size_t length;
} sogen_dart_linux_mapped_section_list;
typedef struct sogen_dart_linux_mapped_module {
  sogen_dart_buffer name_utf8;
  sogen_dart_buffer path_utf8;
  uint64_t image_base;
  uint64_t size_of_image;
  uint64_t entry_point;
  sogen_dart_linux_exported_symbol_list exports;
  sogen_dart_buffer_list needed_libraries;
  sogen_dart_linux_mapped_section_list sections;
  sogen_dart_buffer rpath_utf8;
  sogen_dart_buffer runpath_utf8;
} sogen_dart_linux_mapped_module;
typedef struct sogen_dart_linux_mapped_module_list {
  sogen_dart_linux_mapped_module *data;
  size_t length;
} sogen_dart_linux_mapped_module_list;