lib/src/ffi/sogen_native_bindings.g.dart


  late final _sogen_dart_linux_memory_allocatePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Size,
            ffi.Int32,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_linux_memory_allocate');
  late final _sogen_dart_linux_memory_allocate =
      _sogen_dart_linux_memory_allocatePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              int,
              ffi.Pointer<ffi.Uint64>,
            )
          >();

  int sogen_dart_linux_memory_allocate_at(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    int permissions,
    ffi.Pointer<ffi.Int32> success,
  ) {
    return _sogen_dart_linux_memory_allocate_at(
      app,
      address,
      size,
      permissions,
      success,
    );
  }

  late final _sogen_dart_linux_memory_allocate_atPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Size,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_linux_memory_allocate_at');
  late final _sogen_dart_linux_memory_allocate_at =
      _sogen_dart_linux_memory_allocate_atPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_linux_memory_protect(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    int permissions,
    ffi.Pointer<ffi.Int32> success,
  ) {
    return _sogen_dart_linux_memory_protect(
      app,
      address,
      size,
      permissions,
      success,
    );
  }

  late final _sogen_dart_linux_memory_protectPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Size,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_linux_memory_protect');
  late final _sogen_dart_linux_memory_protect =
      _sogen_dart_linux_memory_protectPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_linux_memory_release(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    ffi.Pointer<ffi.Int32> success,
  ) {
    return _sogen_dart_linux_memory_release(app, address, size, success);
  }

  late final _sogen_dart_linux_memory_releasePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Size,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_linux_memory_release');
  late final _sogen_dart_linux_memory_release =
      _sogen_dart_linux_memory_releasePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_linux_memory_find_free_base(
    ffi.Pointer<sogen_dart_app> app,
    int size,
    int start,
    ffi.Pointer<ffi.Uint64> address,
  ) {
    return _sogen_dart_linux_memory_find_free_base(app, size, start, address);
  }

  late final _sogen_dart_linux_memory_find_free_basePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Size,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_linux_memory_find_free_base');
  late final _sogen_dart_linux_memory_find_free_base =
      _sogen_dart_linux_memory_find_free_basePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              ffi.Pointer<ffi.Uint64>,
            )
          >();

  int sogen_dart_linux_memory_get_region(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    ffi.Pointer<ffi.Int32> has_value,
    ffi.Pointer<sogen_dart_memory_region> region,
  ) {
    return _sogen_dart_linux_memory_get_region(app, address, has_value, region);
  }

  late final _sogen_dart_linux_memory_get_regionPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<sogen_dart_memory_region>,
          )
        >
      >('sogen_dart_linux_memory_get_region');
  late final _sogen_dart_linux_memory_get_region =
      _sogen_dart_linux_memory_get_regionPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<sogen_dart_memory_region>,
            )
          >();

  int sogen_dart_linux_memory_get_stats(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_linux_memory_stats> stats,
  ) {
    return _sogen_dart_linux_memory_get_stats(app, stats);
  }

  late final _sogen_dart_linux_memory_get_statsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_linux_memory_stats>,
          )
        >
      >('sogen_dart_linux_memory_get_stats');
  late final _sogen_dart_linux_memory_get_stats =
      _sogen_dart_linux_memory_get_statsPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_linux_memory_stats>,
            )
          >();

  int sogen_dart_linux_memory_get_mapped_regions(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_memory_region_list> regions,
  ) => _sogen_dart_linux_memory_get_mapped_regions(app, regions);

  late final _sogen_dart_linux_memory_get_mapped_regionsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_memory_region_list>,
          )
        >
      >('sogen_dart_linux_memory_get_mapped_regions');
  late final _sogen_dart_linux_memory_get_mapped_regions =
      _sogen_dart_linux_memory_get_mapped_regionsPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_memory_region_list>,
            )
          >();

  void sogen_dart_memory_region_list_free(
    ffi.Pointer<sogen_dart_memory_region_list> regions,
  ) => _sogen_dart_memory_region_list_free(regions);

  late final _sogen_dart_memory_region_list_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<sogen_dart_memory_region_list>)
        >
      >('sogen_dart_memory_region_list_free');
  late final _sogen_dart_memory_region_list_free =
      _sogen_dart_memory_region_list_freePtr
          .asFunction<
            void Function(ffi.Pointer<sogen_dart_memory_region_list>)
          >();

  int sogen_dart_linux_memory_get_mmap_base(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Uint64> address,
  ) {
    return _sogen_dart_linux_memory_get_mmap_base(app, address);
  }

  late final _sogen_dart_linux_memory_get_mmap_basePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_linux_memory_get_mmap_base');
  late final _sogen_dart_linux_memory_get_mmap_base =
      _sogen_dart_linux_memory_get_mmap_basePtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Uint64>)
          >();

  int sogen_dart_linux_memory_set_mmap_base(
    ffi.Pointer<sogen_dart_app> app,
    int address,
  ) {
    return _sogen_dart_linux_memory_set_mmap_base(app, address);
  }

  late final _sogen_dart_linux_memory_set_mmap_basePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>, ffi.Uint64)
        >
      >('sogen_dart_linux_memory_set_mmap_base');
  late final _sogen_dart_linux_memory_set_mmap_base =
      _sogen_dart_linux_memory_set_mmap_basePtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int)>();

  int sogen_dart_linux_get_host_port(
    ffi.Pointer<sogen_dart_app> app,
    int emulator_port,
    ffi.Pointer<ffi.Uint16> host_port,
  ) {
    return _sogen_dart_linux_get_host_port(app, emulator_port, host_port);
  }

  late final _sogen_dart_linux_get_host_portPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint16,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('sogen_dart_linux_get_host_port');
  late final _sogen_dart_linux_get_host_port =
      _sogen_dart_linux_get_host_portPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint16>,
            )
          >();

  int sogen_dart_linux_get_emulator_port(
    ffi.Pointer<sogen_dart_app> app,
    int host_port,
    ffi.Pointer<ffi.Uint16> emulator_port,
  ) {
    return _sogen_dart_linux_get_emulator_port(app, host_port, emulator_port);
  }

  late final _sogen_dart_linux_get_emulator_portPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint16,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('sogen_dart_linux_get_emulator_port');
  late final _sogen_dart_linux_get_emulator_port =
      _sogen_dart_linux_get_emulator_portPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint16>,
            )
          >();

  int sogen_dart_linux_map_port(
    ffi.Pointer<sogen_dart_app> app,
    int emulator_port,
    int host_port,
  ) {
    return _sogen_dart_linux_map_port(app, emulator_port, host_port);
  }

  late final _sogen_dart_linux_map_portPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint16,
            ffi.Uint16,
          )
        >
      >('sogen_dart_linux_map_port');
  late final _sogen_dart_linux_map_port = _sogen_dart_linux_map_portPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int, int)>();

  int sogen_dart_linux_get_modules(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_linux_mapped_module_list> modules,
  ) => _sogen_dart_linux_get_modules(app, modules);

  late final _sogen_dart_linux_get_modulesPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_linux_mapped_module_list>,
          )
        >
      >('sogen_dart_linux_get_modules');
  late final _sogen_dart_linux_get_modules = _sogen_dart_linux_get_modulesPtr
      .asFunction<
        int Function(
          ffi.Pointer<sogen_dart_app>,
          ffi.Pointer<sogen_dart_linux_mapped_module_list>,
        )
      >();

  int sogen_dart_linux_find_module_by_address(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    ffi.Pointer<ffi.Int32> hasValue,
    ffi.Pointer<sogen_dart_linux_mapped_module> module,
  ) => _sogen_dart_linux_find_module_by_address(app, address, hasValue, module);
